kcms/keyboard: Fix assigning variants to wrong layouts for "extra" rules

When processing the xkb_rules files, we cannot assume that the layouts
and their corresponding variants will always come in order. Instead
find the layout by name before assigning the variant.

This fixes the layout/variant matches defined in `*.extras.xml`, which
are merged later, and provide new variants to layouts that were already

BUG: 489975
FIXED-IN: 6.2